--- a/srcbin/common.in
+++ b/srcbin/common.in
@@ -1,4 +1,4 @@
-# $Id: common.in,v 1.12 2006/10/02 14:11:25 akf Exp $
+# $Id: common.in,v 1.13 2006/10/25 09:48:54 akf Exp $
 
 #####################################################################
 # change here:
@@ -16,7 +16,8 @@ getquiz     = $(bindir)/getquiz
 quizpath    = $(datadir)/akfquiz
 htmlpath    = $(quizpath)/html
 
-cgidir     = @cgidir@
+cgidir      = @cgidir@
+examdir     = @examdir@
 
 #mandir   = $(prefix)/man
 mandir    = $(datarootdir)/man
@@ -245,7 +246,12 @@ install-strip: install
 
 install-cgi: cgiquiz
 	test -d $(DESTDIR)$(cgidir) || $(INSTALL) -d $(DESTDIR)$(cgidir)
+	test -z "$(examdir)"  \
+	  || test -d $(DESTDIR)$(examdir) \
+	    || $(INSTALL) -d $(DESTDIR)$(examdir)
 	$(INSTALL) -m 0755 -s cgiquiz $(DESTDIR)$(cgidir)
+	@echo "* ATTENTION: check the privileges of $(DESTDIR)$(examdir)"
+	@ls -ld $(DESTDIR)$(examdir)
 
 # searches for Quizfiles and installs them as programs
 # just for Unix
