--- a/srcbin/Makefile.xarm
+++ b/srcbin/Makefile.xarm
@@ -1,6 +1,6 @@
 # use FPC Cross-Compiler for Linux on ARM devices
 
-# $Id: Makefile.xarm,v 1.6 2006/10/10 16:21:11 akf Exp $
+# $Id: Makefile.xarm,v 1.7 2006/10/27 17:55:02 akf Exp $
 
 # Edit this file for Compiler-specific configuration
 # make further changes in common.mak
@@ -17,6 +17,7 @@ NATIVEPFLAGS=-Sh -Sd
 #DEFINES+=-dSDL
 #DEFINES+=-dAdvertisement
 #DEFINES+=-dSdlSoundForAll
+#DEFINES+=-dStrict
 #DEFINES+=-dNoHide
 #DEFINES+=-dscrNoEscKey
 #DEFINES+=-dgrNoEscKey
