--- a/srcbin/Makefile.xw32
+++ b/srcbin/Makefile.xw32
@@ -1,6 +1,6 @@
 # use FPC Cross-Compiler for windows
 
-# $Id: Makefile.xw32,v 1.7 2006/10/10 16:21:11 akf Exp $
+# $Id: Makefile.xw32,v 1.8 2006/10/27 17:55:02 akf Exp $
 
 # Edit this file for Compiler-specific configuration
 # make further changes in common.mak
@@ -22,6 +22,7 @@ POPT+=-Op3
 DEFINES+=-dSDL
 DEFINES+=-dAdvertisement
 #DEFINES+=-dSdlSoundForAll
+#DEFINES+=-dStrict
 #DEFINES+=-dNoTitleImage
 #DEFINES+=-dNoHide
 #DEFINES+=-dscrNoEscKey
