--- a/srcbin/Makefile.gpc
+++ b/srcbin/Makefile.gpc
@@ -1,6 +1,6 @@
 # Compile with GPC for the native machine using libSDL
 
-# $Id: Makefile.gpc,v 1.9 2006/10/27 17:55:02 akf Exp $
+# $Id: Makefile.gpc,v 1.10 2006/10/28 04:08:55 akf Exp $
 
 # make further changes in common.mak
 
@@ -33,7 +33,7 @@ NATIVEPC=$(PC)
 NATIVEPFLAGS=$(PFLAGS)
 
 DEFINES+=-D SDL
-#DEFINES+=-D Strict
+DEFINES+=-D Transitional
 #DEFINES+=-D SdlSoundForAll
 #DEFINES+=-D Advertisement
 DEFINES+=-D scrNoEscKey
