--- a/srcbin/Makefile.xw32
+++ b/srcbin/Makefile.xw32
@@ -1,6 +1,6 @@
 # use FPC Cross-Compiler for windows
 
-# $Id: Makefile.xw32,v 1.8 2006/10/27 17:55:02 akf Exp $
+# $Id: Makefile.xw32,v 1.9 2006/10/28 04:08:55 akf Exp $
 
 # Edit this file for Compiler-specific configuration
 # make further changes in common.mak
@@ -22,7 +22,7 @@ POPT+=-Op3
 DEFINES+=-dSDL
 DEFINES+=-dAdvertisement
 #DEFINES+=-dSdlSoundForAll
-#DEFINES+=-dStrict
+DEFINES+=-dTransitional
 #DEFINES+=-dNoTitleImage
 #DEFINES+=-dNoHide
 #DEFINES+=-dscrNoEscKey
