--- a/doc/english/Makefile
+++ b/doc/english/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.4 2006/09/21 10:56:40 akf Exp $
+# $Id: Makefile,v 1.5 2006/10/30 15:48:07 akf Exp $
 
 TXTFILES=mkquiz.txt scrquiz.txt grquiz.txt akfquiz.txt cgiquiz.txt \
          linequiz.txt
@@ -11,6 +11,14 @@ PDFFILES=mkquiz.pdf scrquiz.pdf grquiz.pdf akfquiz.pdf cgiquiz.pdf \
 
 SHELL = /bin/sh
 
+
+TIDY = tidy -ascii -q --show-warnings 0 \
+            --doctype loose \
+            --drop-proprietary-attributes 1 
+
+## Use this, if you don't have the program "tidy"
+#TIDY = cat
+
 all: txt html pdf
 
 txt: $(TXTFILES)
@@ -21,22 +29,22 @@ clean:
 	-rm -f $(TXTFILES) $(HTMLFILES) $(PDFFILES)
 
 mkquiz.html: mkquiz.1
-	groff -man -Thtml mkquiz.1 > mkquiz.html
+	-groff -man -Thtml mkquiz.1 | $(TIDY) > mkquiz.html
 
 scrquiz.html: scrquiz.1
-	groff -man -Thtml scrquiz.1 > scrquiz.html
+	-groff -man -Thtml scrquiz.1 | $(TIDY) > scrquiz.html
 
 grquiz.html: grquiz.1
-	groff -man -Thtml grquiz.1 > grquiz.html
+	-groff -man -Thtml grquiz.1 | $(TIDY) > grquiz.html
 
 akfquiz.html: akfquiz.5
-	groff -man -Thtml akfquiz.5 > akfquiz.html
+	-groff -man -Thtml akfquiz.5 | $(TIDY) > akfquiz.html
 
 cgiquiz.html: cgiquiz.8
-	groff -man -Thtml cgiquiz.8 > cgiquiz.html
+	-groff -man -Thtml cgiquiz.8 | $(TIDY) > cgiquiz.html
 
 linequiz.html: linequiz.1
-	groff -man -Thtml linequiz.1 > linequiz.html
+	-groff -man -Thtml linequiz.1 | $(TIDY) > linequiz.html
 
 mkquiz.txt: mkquiz.1
 	groff -man -Tlatin1 mkquiz.1 | col -bx > mkquiz.txt
