ignore created quizstat pages

--- a/doc/deutsch/.cvsignore
+++ b/doc/deutsch/.cvsignore
@@ -1,6 +1,6 @@
 mkquiz.txt scrquiz.txt grquiz.txt akfquiz.txt cgiquiz.txt 
-linequiz.txt gtkquizchooser.txt
+linequiz.txt gtkquizchooser.txt quizstat.txt
 mkquiz.html scrquiz.html grquiz.html akfquiz.html cgiquiz.html 
-linequiz.html gtkquizchooser.html
+linequiz.html gtkquizchooser.html quizstat.html
 mkquiz.pdf scrquiz.pdf grquiz.pdf akfquiz.pdf cgiquiz.pdf
-linequiz.pdf gtkquizchooser.pdf
+linequiz.pdf gtkquizchooser.pdf quizstat.pdf
