--- a/srcbin/Makefile.xw32
+++ b/srcbin/Makefile.xw32
@@ -1,6 +1,6 @@
 # use FPC Cross-Compiler for windows
 
-# $Id: Makefile.xw32,v 1.9 2006/10/28 04:08:55 akf Exp $
+# $Id: Makefile.xw32,v 1.10 2006/12/30 14:23:11 akf Exp $
 
 # Edit this file for Compiler-specific configuration
 # make further changes in common.mak
@@ -12,7 +12,7 @@ NATIVEPFLAGS=
 # Cross-Compiling to Windows
 # use "make windows"
 PC=ppc386
-PFLAGS=-Twin32 -XPi586-mingw32msvc- -Xd
+PFLAGS=-Twin32 -XPi586-mingw32msvc- -Xd -Fl/usr/i586-mingw32msvc/lib
 
 POPT=-O2G -Xs -XX
 
@@ -32,8 +32,6 @@ DEFINES+=-dTransitional
 #DEFINES+=-dNoProjectLink
 
 IMAGEOBJ=quizhg.inc hginfo.inc titimg.inc
-SOUNDOBJ=errorsnd.inc infosnd.inc introsnd.inc rightsnd.inc wrongsnd.inc \
-         neutralsnd.inc
 
 SHELL = /bin/sh
 
