--- a/srcbin/common.in
+++ b/srcbin/common.in
@@ -1,4 +1,4 @@
-# $Id: common.in,v 1.17 2006/12/30 14:23:11 akf Exp $
+# $Id: common.in,v 1.18 2006/12/30 14:49:58 akf Exp $
 
 #####################################################################
 # change here:
@@ -14,7 +14,7 @@ icondir     = $(datarootdir)/pixmaps/
 docdir      = $(prefix)/share/doc/akfquiz
 quizdir     = $(datadir)/akfquiz/quiz
 sounddir    = $(datadir)/akfquiz/sound
-htmldir     = $(quizdir)/html
+htmldir     = $(datadir)/akfquiz/html
 
 cgidir      = @cgidir@
 examdir     = @examdir@
