--- a/srcbin/Makefile.fpc
+++ b/srcbin/Makefile.fpc
@@ -1,6 +1,6 @@
 # Compile with FPC for the native machine
 
-# $Id: Makefile.fpc,v 1.9 2006/12/30 14:23:11 akf Exp $
+# $Id: Makefile.fpc,v 1.10 2007/01/24 15:12:16 akf Exp $
 
 # make further changes in common.mak
 
@@ -40,6 +40,7 @@ POPT=-O2G -Xs -XX
 
 DEFINES+=-dSDL
 
+#DEFINES+=-dNEEDPTHREAD
 #DEFINES+=-dSdlSoundForAll
 DEFINES+=-dTransitional
 #DEFINES+=-dNoTitleImage
