--- a/srcbin/Makefile.gpc
+++ b/srcbin/Makefile.gpc
@@ -1,6 +1,6 @@
 # Compile with GPC for the native machine using libSDL
 
-# $Id: Makefile.gpc,v 1.11 2006/12/30 14:23:11 akf Exp $
+# $Id: Makefile.gpc,v 1.12 2007/01/24 15:12:16 akf Exp $
 
 # make further changes in common.mak
 
@@ -33,6 +33,7 @@ NATIVEPC=$(PC)
 NATIVEPFLAGS=$(PFLAGS)
 
 DEFINES+=-D SDL
+#DEFINES+=-D NEEDPTHREAD
 DEFINES+=-D Transitional
 #DEFINES+=-D SdlSoundForAll
 #DEFINES+=-D Advertisement
