--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.9 2006/12/30 14:23:11 akf Exp $
+# $Id: Makefile.in,v 1.10 2007/03/18 11:09:07 akf Exp $
 #
 # this Makefile is just a glue to the others
 # if you want to configure things, use the script configure 
@@ -119,7 +119,13 @@ dist: distclean
 	      akfquiz/configure \
 	      akfquiz/Makefile.in \
 	      akfquiz/desktop/ \
-	      akfquiz/share/akfquiz/sound/* \
+	      akfquiz/share/akfquiz/sound/errorsnd.ub \
+	      akfquiz/share/akfquiz/sound/infosnd.ub \
+	      akfquiz/share/akfquiz/sound/introsnd.ub \
+	      akfquiz/share/akfquiz/sound/neutralsnd.ub \
+	      akfquiz/share/akfquiz/sound/rightsnd.ub \
+	      akfquiz/share/akfquiz/sound/wrongsnd.ub \
+	      akfquiz/share/akfquiz/sound/README \
 	      akfquiz/share/akfquiz/quiz/Linux-en.akfquiz \
 	      akfquiz/share/akfquiz/quiz/Linux-de.akfquiz \
 	      akfquiz/share/akfquiz/quiz/Christentum-de.akfquiz \
