fix .gitignore files

--- a/srcbin/.gitignore
+++ b/srcbin/.gitignore
@@ -1,7 +1,25 @@
-Makefile common.mak config.inc
-errorsnd.inc infosnd.inc introsnd.inc neutralsnd.inc rightsnd.inc wrongsnd.inc
-quizhg.inc titimg.inc
-*.gpi *.gpm *.ppu
-cgiquiz diaquiz grquiz linequiz mkquiz gtkquizchooser scrquiz
+*.o
+*.a
+Makefile
+common.mak
+config.inc
+errorsnd.inc
+infosnd.inc
+introsnd.inc
+neutralsnd.inc
+rightsnd.inc
+wrongsnd.inc
+quizhg.inc
+titimg.inc
+*.gpi
+*.gpm
+*.ppu
+cgiquiz
+diaquiz
+grquiz
+linequiz
+mkquiz
+gtkquizchooser
+scrquiz
 ppm2pas
 getquiz
