--- a/doc/deutsch/.gitignore
+++ b/doc/deutsch/.gitignore
@@ -1,6 +1,27 @@
-mkquiz.txt scrquiz.txt grquiz.txt akfquiz.txt cgiquiz.txt 
-linequiz.txt gtkquizchooser.txt quizstat.txt diaquiz.txt
-mkquiz.html scrquiz.html grquiz.html akfquiz.html cgiquiz.html 
-linequiz.html gtkquizchooser.html quizstat.html diaquiz.html
-mkquiz.pdf scrquiz.pdf grquiz.pdf akfquiz.pdf cgiquiz.pdf
-linequiz.pdf gtkquizchooser.pdf quizstat.pdf diaquiz.pdf
+mkquiz.txt
+scrquiz.txt
+grquiz.txt
+akfquiz.txt
+cgiquiz.txt
+linequiz.txt
+gtkquizchooser.txt
+quizstat.txt
+diaquiz.txt
+mkquiz.html
+scrquiz.html
+grquiz.html
+akfquiz.html
+cgiquiz.html
+linequiz.html
+gtkquizchooser.html
+quizstat.html
+diaquiz.html
+mkquiz.pdf
+scrquiz.pdf
+grquiz.pdf
+akfquiz.pdf
+cgiquiz.pdf
+linequiz.pdf
+gtkquizchooser.pdf
+quizstat.pdf
+diaquiz.pdf
