--- a/srcbin/common.in
+++ b/srcbin/common.in
@@ -1,5 +1,3 @@
-# $Id: common.in,v 1.20 2007/07/02 10:14:10 akf Exp $
-
 #####################################################################
 # change here:
 #####################################################################
@@ -98,7 +96,7 @@ diaquiz: diaquiz.pas qsys.pas qmsgs.pas uakfquiz.pas dialog.pas \
 
 # just for Windows
 w32res:
-	$(MAKE) -C w32 w32res
+	$(MAKE) -C w32 w32res CROSS_PREFIX=$(CROSS_PREFIX)
 
 clean:
 	-rm -f *.o *.or *.a a.out *.gpi *.gpm *.ppu *.old *~
